--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -22,7 +22,7 @@
     <table class="table table-striped">
         <tr ng-repeat="personage in personages | orderBy : 'id'">
             <td style="vertical-align:middle; text-align: center;">
-                <a href="/views/view_personage.html?id={{personage.id}}" class="btn btn-link" role="button">
+                <a href="/views/personage_logic/view_personage.html?id={{personage.id}}" class="btn btn-link" role="button">
                     {{ personage.name }}
                 </a>
             </td>
@@ -32,8 +32,8 @@
                     <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">Ещё
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="/views/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
-                        <li><a href="/views/edit_personage.html?id={{personage.id}}">Редактировать</a></li>
+                        <li><a href="/views/personage_logic/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
+                        <li><a href="/views/personage_logic/edit_personage.html?id={{personage.id}}">Прокачка</a></li>
                         <li><a href="#" ng-click="deletePersonage(personage.id)">х</a></li>
                     </ul>
                 </div>
@@ -96,7 +96,7 @@
             $scope.loader = true;
 
             function success(data) {
-                $window.location.href = '/views/create_personage.html?id=' + data[0];
+                $window.location.href = '/views/personage_logic/create_personage.html?id=' + data[0];
             }
 
             var personage = $q.defer();
