reset button added

--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1060,9 +1060,13 @@
             Вы потратили больше опыта, чем у вас есть!
         </div>
 
-        <button type="submit" ng-disabled="ageForm.$invalid || experienceValid()" class="btn btn-default btn-block"
+        <button type="submit" ng-disabled="ageForm.$invalid || experienceValid()" class="btn btn-success btn-block"
                 ng-click="savePersonage()">
             Сохранить
+        </button>
+
+        <button class="btn btn-warning btn-block" ng-click="reset()">
+            Сброс
         </button>
 
     </div>
