added player name

--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -8,8 +8,11 @@
                             <a data-toggle="collapse" href="#main_menu">Главное меню</a>
                         </h4>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-xs-3">
                         Права: {{player.Role.name}}
+                    </div>
+                    <div class="col-xs-3">
+                        Игрок: {{player.name}}
                     </div>
                 </div>
             </div>
