--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -398,8 +398,8 @@
                                                            for="noticeDescription">Текст:</label>
                                                     <div class="col-sm-10">
                                                         <textarea ng-model="noticeDescription" class="form-control"
-                                                               id="noticeDescription" name="noticeDescriptionInput"
-                                                               required></textarea>
+                                                                  id="noticeDescription" name="noticeDescriptionInput"
+                                                                  required></textarea>
                                                     </div>
                                                 </div>
 
@@ -540,20 +540,17 @@
         </div>
 
         <form name="expirienceForm">
-            <div class="row">
-                <div class="col-xs-offset-1 col-xs-4">
-                    <p class="lead">
+            <table class="table table-striped">
+                <tr>
+                    <td class="lead">
                         <strong>Очки опыта:</strong>
-                    </p>
-                </div>
-                <div class="col-xs-offset-2 col-xs-4">
-                    <div id="expirience" ng-model="expirience">
-                        <p class="lead">
-                            <strong>{{personage.experience}}</strong>
-                        </p>
-                    </div>
-                </div>
-            </div>
+                    </td>
+
+                    <td class="lead">
+                        <strong>{{personage.experience}}</strong>
+                    </td>
+                </tr>
+            </table>
         </form>
 
     </div>
