--- a/public/views/loader.html
+++ b/public/views/loader.html
@@ -1,3 +1,3 @@
 <div class="overlay" id="loader" ng-show="loader">
-    <img style="margin-left: 48%; margin-top: 200px;" src="/images/loader.gif" alt="Smiley face" align="middle">
+    <img style="margin-left: 45%; margin-top: 300px; position: fixed;" src="/images/loader.gif" alt="loading..." align="middle">
 </div>
