--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -672,6 +672,10 @@
                                                             По умолчанию
                                                         </td>
 
+                                                        <td style="vertical-align:middle;"
+                                                            ng-if="!personageFlaw.personage_race_default">
+                                                        </td>
+
                                                         <td ng-hide="personageFlaw.personage_race_default && personageFlaw.Flaw.unremovable">
                                                             <a class="btn btn-link"
                                                                ng-click="deletePersonageFlaw(personageFlaw)">х</a>
