--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -126,7 +126,7 @@
                                     <div class="panel panel-default">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#skillsAccordeon"
-                                               href="#attachedSkills">
+                                               href="#attachedSkills" ng-click="getPersonageAttachedSkills()">
                                                 <div class="panel-heading">
                                                     Прикрепленные
                                                 </div>
