--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
     <script src="edit_personage.js"></script>
+    <script src="attached_skills_controller.js"></script>
     <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 <body ng-app="personageApp">
@@ -123,7 +124,7 @@
                             <div>
                                 <div class="panel-group" id="skillsAccordeon">
 
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" ng-controller="personageAttachedSkillsController">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#skillsAccordeon"
                                                href="#attachedSkills" ng-click="getPersonageAttachedSkills()">
