--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -14,7 +14,6 @@
     <script src="/views/permissions/permissions.js"></script>
     <script src="personage_main_controller.js"></script>
     <script src="attributes_controller.js"></script>
-    <script src="attached_skills_controller.js"></script>
     <script src="../permissions/check_player_permissions.js"></script>
 </head>
 <body ng-app="personageApp">
@@ -126,7 +125,7 @@
                             <div>
                                 <div class="panel-group" id="skillsAccordeon">
 
-                                    <div class="panel panel-default" ng-controller="personageAttachedSkillsController">
+                                    <div class="panel panel-default">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#skillsAccordeon"
                                                href="#attachedSkills" ng-click="getPersonageAttachedSkills()">
@@ -757,7 +756,7 @@
 
                 <div class="panel panel-default">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#spells">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#spells" ng-click="getPersonageAttachedSkills()">
                             <div class="panel-heading">
                                 Заклинания
                             </div>
@@ -777,7 +776,7 @@
                                                 </div>
                                             </a>
                                         </h4>
-                                        <div id="spells{{school.id}}" class="panel-collapse collapse">
+                                        <div id="spells{{school.id}}" class="panel-collapse collapse in">
                                             <div class="panel-body">
                                                 <table class="table table-striped">
                                                     <tr ng-repeat="spell in school.Spells | orderBy : 'name'">
