--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -13,7 +13,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
     <script src="edit_personage.js"></script>
-    <script src="attached_skills_controller.js"></script>
     <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 <body ng-app="personageApp">
@@ -124,7 +123,7 @@
                             <div>
                                 <div class="panel-group" id="skillsAccordeon">
 
-                                    <div class="panel panel-default" ng-controller="personageAttachedSkillsController">
+                                    <div class="panel panel-default">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#skillsAccordeon"
                                                href="#attachedSkills" ng-click="getPersonageAttachedSkills()">
@@ -724,7 +723,7 @@
 
                 <div class="panel panel-default">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#spells">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#spells" ng-click="getPersonageAttachedSkills()">
                             <div class="panel-heading">
                                 Заклинания
                             </div>
@@ -739,7 +738,7 @@
                                     <div class="panel panel-default">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" href="#spells{{school.id}}">
-                                                <div class="panel-heading">
+                                                <div class="panel-heading" ng-click="getPersonageAttachedSkills()">
                                                     {{school.name}}
                                                 </div>
                                             </a>
