--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet"
+          href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
     <script src="edit_personage.js"></script>
+    <script src="test.js"></script>
     <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 <body ng-app="personageApp">
@@ -156,69 +165,12 @@
                                                         </td>
                                                     </tr>
                                                 </table>
-                                                <button type="button" class="btn btn-default pull-right"
-                                                        data-toggle="modal" data-target="#addAttachedSkillDialog"
-                                                        ng-click="calculateAttachedSkillSelectOptions()">Добавить
-                                                    прикрепленный навык
-                                                </button>
 
-                                                <div id="addAttachedSkillDialog" class="modal fade" role="dialog">
-                                                    <div class="modal-dialog">
 
-                                                        <!-- Modal content-->
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <button type="button" class="close"
-                                                                        data-dismiss="modal">&times;</button>
-                                                                <h4 class="modal-title">Добавить прикрепленный
-                                                                    навык</h4>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                <form class="form-horizontal" role="form"
-                                                                      name="addPersonageAttachedSkillForm">
-                                                                    <div class="form-group">
-                                                                        <label class="control-label col-sm-2"
-                                                                               for="attachedSkill_id">Навык: </label>
-
-                                                                        <div class="col-sm-10">
-                                                                            <select class="form-control"
-                                                                                    ng-model="attachedSkill_id"
-                                                                                    id="attachedSkill_id"
-                                                                                    ng-options="selectAttachedSkill.id as selectAttachedSkill.name for selectAttachedSkill in selectAttachedSkills"
-                                                                                    required>
-                                                                                <option value="" style="display:none">
-                                                                                    Выберите навык...
-                                                                                </option>
-                                                                            </select>
-                                                                        </div>
-                                                                    </div>
-
-                                                                    <div class="form-group">
-                                                                        <div class="row">
-                                                                            <div class="col-md-offset-7 col-md-2 col-xs-offset-5 col-xs-1">
-                                                                                <button type="button"
-                                                                                        class="btn btn-default pull-right"
-                                                                                        data-dismiss="modal">
-                                                                                    Отмена
-                                                                                </button>
-                                                                            </div>
-
-                                                                            <div class="col-md-3 col-xs-1">
-                                                                                <button type="submit"
-                                                                                        class="btn btn-success pull-left"
-                                                                                        ng-click="addPersonageAttachedSkill(attachedSkill_id)"
-                                                                                        ng-disabled="addPersonageAttachedSkillForm.$invalid">
-                                                                                    Добавить
-                                                                                </button>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </form>
-                                                            </div>
-                                                        </div>
-
-                                                    </div>
-                                                </div>
+                                                <md-content class="md-padding pull-right">
+                                                    <md-button ng-click="calculateAttachedSkillSelectOptions();openDialog($event)" class="md-raised">Добавить прикрепленный навык
+                                                    </md-button>
+                                                </md-content>
 
                                             </div>
                                         </div>
@@ -723,7 +675,8 @@
 
                 <div class="panel panel-default">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#spells" ng-click="getPersonageAttachedSkills()">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#spells"
+                           ng-click="getPersonageAttachedSkills()">
                             <div class="panel-heading">
                                 Заклинания
                             </div>
