fix problem with personage saving

--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -730,8 +730,7 @@
             Вы потратили больше опыта, чем у вас есть!
         </div>
 
-        <!--<button type="submit" ng-disabled="ageForm.$invalid || experienceValid()" class="btn btn-success btn-block"-->
-        <button type="submit" ng-disabled="true" class="btn btn-success btn-block"
+        <button type="submit" ng-disabled="ageForm.$invalid || experienceValid()" class="btn btn-success btn-block"
                 ng-click="savePersonage()">
             Сохранить
         </button>
